Fixed background overlap and cutoff conflict between auth and profile page

--- a/src/website/src/pages/Auth.css
+++ b/src/website/src/pages/Auth.css
@@ -5,7 +5,7 @@
 }
 
 /*Main issue*/
-body {
+body#auth-body{
   margin: 0;
   font-family: Roboto, -apple-system, "Helvetica Neue", "Segoe UI", Arial,
     sans-serif;
@@ -15,6 +15,7 @@ body {
     height: 100%; */
   background-image: url("../../public/images/authentication.png");
   background-size: cover;
+  min-height: 100vh; /* This fixes the background cut off issue*/
 }
 
 .forms-section {
