--- a/src/website/src/pages/Profile.css
+++ b/src/website/src/pages/Profile.css
@@ -1,4 +1,12 @@
-body {
+
+html {
+  /* To make use of full height of page*/
+  min-height: 100%;
+  margin: 0;
+}
+
+
+body#profile-body{
   margin-top: 20px;
   color: #1a202c;
   text-align: left;
@@ -12,6 +20,9 @@ body {
   background-size: cover;
   background-color: #e2e8f0;
   background-image: url("../../public/images/profile-page.jpg");
+  margin: 0;
+  min-height: 100vh; /* This fixes the background cut off issue*/
+  
 }
 .main-body {
   padding: 15px;
